bin_PROGRAMS = rssd update
rssd_SOURCES = main.cpp
rssd_CPPFLAGS = -I/usr/local/include
rssd_LDFLAGS = -L/usr/local/lib -lPocoXML -lPocoNet -lPocoUtil -lPocoFoundation -lhiredis

update_SOURCES = update.cpp
update_CPPFLAGS = -I/usr/local/include
update_LDFLAGS = -L/usr/local/lib -lPocoXML -lPocoNet -lPocoUtil -lPocoFoundation -lhiredis

#rssd_LDADD = libPocoXML.a


